# fastapi-first-steps

./: .gitignore  main.py  models.py  pyproject.toml  requirements.txt
