[tool.poetry]
name = "FirstStep"
version = "1"
description = "requirements"
authors = ["mamontovdn <mamontovdn@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
